--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-seo": "^4.23.0",
     "quotesy": "^1.0.5",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
