fix(tests): passWithNoTests

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
     "types": "tsc",
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'",
-    "test": "jest -c test/jest.config.js",
+    "test": "jest -c test/jest.config.js --passWithNoTests",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --config video=false",
     "cypress:test": "start-server-and-test start http://localhost:3000 cypress:run"
