--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "husky": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-unfetch": "^3.1.0",
